--- a/temp.tex
+++ b/temp.tex
@@ -13,8 +13,8 @@
 
 
 %отступ
-\usepackage[left=1cm,right=1cm,
-    top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
+%\usepackage[left=1cm,right=1cm,
+%   top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 
 % Математика
 \usepackage{amsmath,amsfonts,amssymb,amsthm,mathtools} 
